--- a/app/src/main/res/layout/activity_main5.xml
+++ b/app/src/main/res/layout/activity_main5.xml
@@ -68,7 +68,8 @@
         android:editable="false"
         android:focusable="false"
         />
-    <android.support.v7.widget.CardView
+
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="10dp"
@@ -84,6 +85,6 @@
         android:background="#4682B4"
         android:id="@+id/btnRegisterDone"
         />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     </LinearLayout>
