--- a/app/src/main/res/layout/activity_main6.xml
+++ b/app/src/main/res/layout/activity_main6.xml
@@ -31,7 +31,8 @@
         android:layout_height="wrap_content"
         android:text="Remember Password"
         android:layout_marginTop="5dp"/>
-    <android.support.v7.widget.CardView
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/card__already_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,14 +49,15 @@
         android:text="Login(if already register)"
         android:background="#4682B4"
         android:id="@+id/btn_already_register"/>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="(or)"
         android:textAlignment="center"
         android:layout_marginTop="5dp"/>
-    <android.support.v7.widget.CardView
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/card_new_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -73,5 +75,5 @@
         android:background="#4682B4"
         android:id="@+id/btn_new_register"
         />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
