--- a/app/src/main/res/layout/activity_main7.xml
+++ b/app/src/main/res/layout/activity_main7.xml
@@ -18,7 +18,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="250dp"
         android:textColor="#4682B4"/>
-    <android.support.v7.widget.CardView
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="#FFFFFF"
@@ -31,7 +32,7 @@
             android:layout_height="wrap_content"
             android:hint="Source Station Name/Code"
             android:layout_marginRight="120dp"/>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,7 +41,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="250dp"
         android:textColor="#4682B4"/>
-    <android.support.v7.widget.CardView
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="#FFFFFF"
@@ -53,8 +55,9 @@
             android:layout_height="wrap_content"
             android:hint="Distination Station Name/Code"
             android:layout_marginRight="100dp"/>
-    </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
         android:id="@+id/card_done"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -71,5 +74,5 @@
             android:background="#4682B4"
             android:text="DONE"
             android:textAlignment="center"/>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
