--- a/app/src/main/res/layout/activity_main8.xml
+++ b/app/src/main/res/layout/activity_main8.xml
@@ -296,7 +296,7 @@
         app:layout_constraintTop_toBottomOf="@+id/spinner7"
         tools:text="Address" />
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="162dp"
         android:layout_marginStart="16dp"
@@ -316,5 +316,5 @@
             android:text="Get Fare"
             android:background="#4682B2"
             android:textColor="#FFFFFF"/>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </android.support.constraint.ConstraintLayout>
