--- a/app/src/main/res/layout/activity_registeration.xml
+++ b/app/src/main/res/layout/activity_registeration.xml
@@ -1,90 +1,103 @@
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_marginRight="50dp"
-    android:layout_marginLeft="50dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginLeft="24dp"
     android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp">
+    android:layout_marginRight="24dp"
+    android:layout_marginBottom="10dp"
+    android:orientation="vertical">
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
+        android:autoSizeTextType="uniform"
         android:text="REGISTRATION"
         android:textAlignment="center"
-        android:autoSizeTextType="uniform"
-        />
+        android:textColor="#4682B4"
+        android:textSize="14sp"
+        android:textStyle="bold" />
+
     <EditText
+        android:id="@+id/edtPhoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:hint="Enter Mobile Number"
-        android:id="@+id/edtPhoneNumber"/>
+        android:hint="Enter Mobile Number" />
+
     <EditText
+        android:id="@+id/edtName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:hint="Enter Your Name"
-        android:id="@+id/edtName"/>
+        android:hint="Enter Your Name" />
+
     <EditText
+        android:id="@+id/edtRegisterPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:hint="Password"
-        android:id="@+id/edtRegisterPassword"/>
+        android:hint="Password" />
+
     <EditText
+        android:id="@+id/edtRegisterConfirmPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:hint="Confirm Password"
-        android:id="@+id/edtRegisterConfirmPassword"/>
+        android:hint="Confirm Password" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:text="Gender"
-        android:layout_marginTop="10dp"
-        />
+        android:textColor="#4682B4" />
+
     <RadioButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Female"
-        android:layout_marginTop="2dp"/>
+        android:layout_marginTop="2dp"
+        android:text="Female" />
+
     <RadioButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Male"
-        android:layout_marginTop="2dp"/>
+        android:layout_marginTop="2dp"
+        android:text="Male" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:text="Select Date of Birth:"
-        android:layout_marginTop="10dp"/>
+        android:textColor="#4682B4" />
+
     <EditText
+        android:id="@+id/edt_birthday"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="MM/DD/YYYY"
-        android:id="@+id/edt_birthday"
+        android:layout_marginTop="2dp"
         android:clickable="true"
         android:editable="false"
         android:focusable="false"
-        />
+        android:hint="MM/DD/YYYY" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="100dp"
-        app:cardCornerRadius="10dp"
         android:id="@+id/card_get_otp"
-        >
-    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Get OTP"
-        android:background="#4682B4"
-        android:id="@+id/btnRegisterDone"
-        />
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="10dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="10dp">
+
+        <Button
+            android:id="@+id/btnRegisterDone"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#4682B4"
+            android:text="Register"
+            android:textColor="#FFFFFF" />
     </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+</LinearLayout>
