--- a/app/src/main/res/layout/activity_station.xml
+++ b/app/src/main/res/layout/activity_station.xml
@@ -3,76 +3,87 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
+        android:layout_marginTop="10dp"
         android:text="Normal Booking"
         android:textAlignment="center"
-        android:layout_marginTop="10dp"
-        android:textColor="#4682B4"/>
+        android:textColor="#4682B4"
+        android:textStyle="bold" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="250dp"
         android:text="From Station"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="250dp"
-        android:textColor="#4682B4"/>
+        android:textColor="#4682B4" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:id="@+id/card_source_station"
+        android:layout_width="332dp"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#FFFFFF"
         android:layout_margin="10dp"
+        android:layout_marginRight="50dp"
         android:elevation="8dp"
-        app:cardCornerRadius="10dp"
-        android:id="@+id/card_source_station">
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="10dp">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="50dp"
             android:hint="Source Station Name/Code"
-            android:layout_marginRight="120dp"/>
+            android:textAlignment="center"/>
     </androidx.cardview.widget.CardView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=" To Station"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="250dp"
-        android:textColor="#4682B4"/>
+        android:text=" To Station"
+        android:textColor="#4682B4" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:id="@+id/card_destination_station"
+        android:layout_width="335dp"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#FFFFFF"
         android:layout_margin="10dp"
+        android:layout_marginRight="50dp"
         android:elevation="8dp"
-        app:cardCornerRadius="10dp"
-        android:id="@+id/card_destination_station">
+        app:cardBackgroundColor="#FFFFFF"
+        app:cardCornerRadius="10dp">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="50dp"
             android:hint="Distination Station Name/Code"
-            android:layout_marginRight="100dp"/>
+            android:textAlignment="center"/>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_done"
-        android:layout_width="match_parent"
+        android:layout_width="184dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="80dp"
         android:background="#4682B4"
-        android:elevation="10dp"
-       >
+        android:elevation="10dp">
+
         <Button
             android:id="@+id/btn_submit_otp"
-            android:layout_width="match_parent"
+            android:layout_width="188dp"
             android:layout_height="wrap_content"
             android:background="#4682B4"
             android:text="DONE"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:textColor="#FFFFFF" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
