--- a/app/src/main/res/layout/activity_bookingtype.xml
+++ b/app/src/main/res/layout/activity_bookingtype.xml
@@ -1,177 +1,223 @@
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:elevation="8dp"
-        app:cardBackgroundColor="#4682B4"
-        app:cardCornerRadius="10dp"
-        android:id="@+id/card_normal_book">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#4682B4"
-        android:layout_margin="5dp">
-        <ImageView
-            android:id="@+id/img_normal_book"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="4dp"
-            android:background="@drawable/normal_ticket"
-            />
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/img_normal_book"
-            android:layout_toRightOf="@id/img_normal_book"
-            android:text="Normal Booking"
-            android:textColor="#FFFFFF" />
-    </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:elevation="8dp"
-        app:cardBackgroundColor="#4682B4"
-        app:cardCornerRadius="10dp"
-        android:id="@+id/card_quick_booking">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#4682B4"
-        android:layout_margin="5dp">
-        <ImageView
-            android:id="@+id/img_quick_booking"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="4dp"
-            android:background="@drawable/normal_ticket"
-            />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Quick Booking"
-        android:layout_centerVertical="true"
-        android:textColor="#FFFFFF"
-        android:layout_toEndOf="@id/img_quick_booking"
-        android:layout_toRightOf="@id/img_quick_booking"/>
-    </RelativeLayout>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:elevation="8dp"
-        app:cardBackgroundColor="#4682B4"
-        app:cardCornerRadius="10dp"
-        android:id="@+id/card_platform_ticket">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="#4682B4">
-        <ImageView
-            android:id="@+id/img_platform_ticket"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="4dp"
-            android:background="@drawable/normal_ticket"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Platform Ticket"
-            android:layout_centerVertical="true"
-            android:textColor="#FFFFFF"
-            android:layout_toEndOf="@id/img_platform_ticket"
-            android:layout_toRightOf="@id/img_platform_ticket"/>
-    </RelativeLayout>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:elevation="8dp"
-        app:cardBackgroundColor="#4682B4"
-        app:cardCornerRadius="10dp"
-        android:id="@+id/card_season_ticket">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="#4682B4">
-        <ImageView
-            android:id="@+id/img_season_ticket"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="4dp"
-            android:background="@drawable/normal_ticket"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Season Ticket"
-            android:layout_centerVertical="true"
-            android:textColor="#FFFFFF"
-            android:layout_toEndOf="@id/img_season_ticket"
-            android:layout_toRightOf="@id/img_season_ticket"/>
-    </RelativeLayout>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:elevation="8dp"
-        app:cardBackgroundColor="#4682B4"
-        app:cardCornerRadius="10dp"
-        android:id="@+id/card_QR_booking">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:background="#4682B4">
-            <ImageView
-                android:id="@+id/img_QR_booking"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_margin="4dp"
-                android:background="@drawable/normal_ticket"
-                />
-            <TextView
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_normal_book"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="QR Booking"
-                android:layout_centerVertical="true"
-                android:textColor="#FFFFFF"
-                android:layout_toEndOf="@id/img_QR_booking"
-                android:layout_toRightOf="@id/img_QR_booking"/>
-    </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+                android:layout_margin="10dp"
+                android:elevation="8dp"
+                app:cardBackgroundColor="#4682B4"
+                app:cardCornerRadius="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="#4682B4">
+
+                    <ImageView
+                        android:id="@+id/img_normal_book"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="4dp"
+                        android:background="@drawable/normal_ticket" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@id/img_normal_book"
+                        android:layout_toRightOf="@id/img_normal_book"
+                        android:padding="8dp"
+                        android:text="Normal Booking"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:typeface="serif" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_quick_booking"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:elevation="8dp"
+                app:cardBackgroundColor="#4682B4"
+                app:cardCornerRadius="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="#4682B4">
+
+                    <ImageView
+                        android:id="@+id/img_quick_booking"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="4dp"
+                        android:background="@drawable/normal_ticket" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@id/img_quick_booking"
+                        android:layout_toRightOf="@id/img_quick_booking"
+                        android:padding="8dp"
+                        android:text="Quick Booking"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:typeface="serif" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_platform_ticket"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:elevation="8dp"
+                app:cardBackgroundColor="#4682B4"
+                app:cardCornerRadius="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="#4682B4">
+
+                    <ImageView
+                        android:id="@+id/img_platform_ticket"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="4dp"
+                        android:background="@drawable/normal_ticket" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@id/img_platform_ticket"
+                        android:layout_toRightOf="@id/img_platform_ticket"
+                        android:padding="8dp"
+                        android:text="Platform Ticket"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:typeface="serif" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_season_ticket"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:elevation="8dp"
+                app:cardBackgroundColor="#4682B4"
+                app:cardCornerRadius="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="#4682B4">
+
+                    <ImageView
+                        android:id="@+id/img_season_ticket"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="4dp"
+                        android:background="@drawable/normal_ticket" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@id/img_season_ticket"
+                        android:layout_toRightOf="@id/img_season_ticket"
+                        android:padding="8dp"
+                        android:text="Season Ticket"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:typeface="serif" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_QR_booking"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:elevation="8dp"
+                app:cardBackgroundColor="#4682B4"
+                app:cardCornerRadius="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:background="#4682B4">
+
+                    <ImageView
+                        android:id="@+id/img_QR_booking"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="4dp"
+                        android:background="@drawable/normal_ticket" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@id/img_QR_booking"
+                        android:layout_toRightOf="@id/img_QR_booking"
+                        android:padding="8dp"
+                        android:text="QR Booking"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:typeface="serif" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
